adjust ReactSimpleImageViewer position in HTML and increase its z-index to prevent other projects from overlapping with it

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -66,3 +66,7 @@ html {
   border-radius: 20px;
   border: 6px solid grey;
 }
+
+#ReactSimpleImageViewer {
+  z-index: 9999;
+}
